--- a/style.css
+++ b/style.css
@@ -1,15 +1,46 @@
-.nav-banner{
+body{
+    background-color: #1f1f1f;
+    margin: 0%;
+    text-align: center;
+}
+
+.navbar{
+}
+.navbar-container{
+    padding: 1em;
+    background-color: #242424;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-grow: 1;
 }
-.link-wrapper{
-    font-family: 'Spartan' , sans-serif;
+.navbar-logo{
+    margin-left: 1em;
+}
+.navbar-links{
+    display: flex;
+    gap: 2em;
     text-decoration: none;
-    font-size: 30px;
+    font-family : 'Poppins', sans-serif;
+    color: c2c2c2;
+    margin-right: 1em;
+    font-size: 1em;
+
     
-    ;
 }
 a{
-    text-decoration: inherit;
+    text-decoration: none;
+    color: #c2c2c2;
+}
+.main-content-container{
+    display:flex;
+}
+.secondary-content-container{
+   display: flex;
+   font-family: 'Poppins', sans-serif;
+   color: #c2c2c2;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   padding: 2em;
 }
