--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a{
 .main-content-container{
     display:flex;
 }
-.secondary-content-container{
+.main-content-container{
    display: flex;
    font-family: 'Poppins', sans-serif;
    color: #c2c2c2;
