--- a/sign-up.css
+++ b/sign-up.css
@@ -13,15 +13,17 @@ label {
    width: 30%;
    /* Positions the label text beside the input */
    text-align: right;
+   color: #c2c2c2;
 }
 
 label+input {
    width: 30%;
    /* Large margin-right to force the next element to the new-line
        and margin-left to create a gutter between the label and input */
-   margin: 0 30% 10px 4%;
+   margin: 10px 30% 0px 4%;
 }
 
 .buttonHolder{
    text-align: center;
+   margin-top: 10px;
 }
