--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@ body{
     text-align: center;
 }
 
-.navbar{
-}
 .navbar-container{
     padding: 1em;
     background-color: #242424;
@@ -17,6 +15,7 @@ body{
 .navbar-logo{
     margin-left: 1em;
 }
+
 .navbar-links{
     display: flex;
     gap: 2em;
@@ -28,6 +27,7 @@ body{
 
     
 }
+
 a{
     text-decoration: none;
     color: #c2c2c2;
@@ -35,6 +35,7 @@ a{
 .main-content-container{
     display:flex;
 }
+
 .main-content-container{
    display: flex;
    font-family: 'Poppins', sans-serif;
@@ -44,3 +45,40 @@ a{
    flex-direction: column;
    padding: 2em;
 }
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #242424;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #1f1f1f;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
